@@ -107,12 +107,12 @@ glyph_1a:
     db 0xa5, 0x05, 0x05, 0xf9, 0x03, 0xfe, 0x00, 0x00
 
 glyph_1b:
-    db 0x3f, 0x40, 0x80, 0x94, 0x88, 0x94, 0x80, 0x87
-    db 0x88, 0x88, 0x80, 0xff, 0x40, 0x3f, 0x00, 0x00
+    db 0x3f, 0x40, 0x80, 0x94, 0x88, 0x94, 0x80, 0x9f
+    db 0x80, 0x80, 0x80, 0xff, 0x40, 0x3f, 0x00, 0x00
 
 glyph_1c:
-    db 0xfc, 0x06, 0x05, 0xa5, 0x45, 0xa5, 0x05, 0x85
-    db 0x45, 0x45, 0x05, 0xf9, 0x03, 0xfe, 0x00, 0x00
+    db 0xfc, 0x06, 0x05, 0xa5, 0x45, 0xa5, 0x05, 0xe5
+    db 0xc5, 0xc5, 0x05, 0xf9, 0x03, 0xfe, 0x00, 0x00
 
 glyph_1d:
     db 0x3f, 0x40, 0x81, 0x83, 0x87, 0x9f, 0xa3, 0xa1
@@ -147,44 +147,44 @@ glyph_24:
     db 0x05, 0x05, 0x05, 0xf9, 0x03, 0xfe, 0x00, 0x00
 
 glyph_25:
-    db 0x3f, 0x40, 0x87, 0x8f, 0x9f, 0xa0, 0xae, 0xae
-    db 0xa0, 0xbf, 0x80, 0xff, 0x40, 0x3f, 0x00, 0x00
-
-glyph_26:
-    db 0xfc, 0x06, 0xa5, 0xe5, 0xe5, 0x15, 0xd5, 0xd5
-    db 0xd5, 0xf5, 0x05, 0xf9, 0x03, 0xfe, 0x00, 0x00
-
-glyph_27:
-    db 0x3f, 0x40, 0x80, 0x80, 0x88, 0x85, 0x82, 0x85
-    db 0x88, 0x80, 0x80, 0xff, 0x40, 0x3f, 0x00, 0x00
-
-glyph_28:
-    db 0xfc, 0x06, 0x05, 0x05, 0x85, 0x05, 0x05, 0x05
-    db 0x85, 0x05, 0x05, 0xf9, 0x03, 0xfe, 0x00, 0x00
-
-glyph_29:
-    db 0x3f, 0x40, 0x80, 0x80, 0x80, 0x80, 0x9b, 0x80
+    db 0x3f, 0x55, 0xaa, 0xd5, 0xff, 0x80, 0xb0, 0x80
     db 0x80, 0x80, 0x80, 0xff, 0x40, 0x3f, 0x00, 0x00
 
-glyph_2a:
-    db 0xfc, 0x06, 0x05, 0x05, 0x05, 0x05, 0x65, 0x05
+glyph_26:
+    db 0xfc, 0x56, 0xad, 0x55, 0xfd, 0x05, 0x05, 0x05
     db 0x05, 0x05, 0x05, 0xf9, 0x03, 0xfe, 0x00, 0x00
 
+glyph_27:
+    db 0x3f, 0x40, 0xab, 0xba, 0x8b, 0x80, 0x83, 0x85
+    db 0x87, 0x85, 0x86, 0xff, 0x40, 0x3f, 0x00, 0x00
+
+glyph_28:
+    db 0xfc, 0x06, 0x85, 0x85, 0x85, 0x05, 0x35, 0x55
+    db 0x55, 0x55, 0x65, 0xf9, 0x03, 0xfe, 0x00, 0x00
+
+glyph_29:
+    db 0x3f, 0x40, 0x80, 0xbd, 0x81, 0xbd, 0x80, 0xbd
+    db 0x81, 0xbd, 0x80, 0xff, 0x40, 0x3f, 0x00, 0x00
+
+glyph_2a:
+    db 0xfc, 0x06, 0x05, 0xf5, 0xf5, 0xf5, 0x05, 0xf5
+    db 0xf5, 0xf5, 0x05, 0xf9, 0x03, 0xfe, 0x00, 0x00
+
 glyph_2b:
-    db 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00
-    db 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00
+    db 0x00, 0x00, 0x00, 0x0c, 0x1c, 0x34, 0x6c, 0xdc
+    db 0x7c, 0x3c, 0x1c, 0x0c, 0x00, 0x00, 0x00, 0x00
 
 glyph_2c:
-    db 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00
-    db 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00
+    db 0x00, 0x00, 0x00, 0x00, 0x00, 0x10, 0x38, 0x6c
+    db 0xde, 0xbe, 0xfe, 0x00, 0x00, 0x00, 0x00, 0x00
 
 glyph_2d:
-    db 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00
-    db 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00
+    db 0x00, 0x00, 0x00, 0x00, 0x00, 0xfe, 0xfa, 0xf6
+    db 0x6c, 0x38, 0x10, 0x00, 0x00, 0x00, 0x00, 0x00
 
 glyph_2e:
-    db 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00
-    db 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00
+    db 0x00, 0x00, 0x00, 0x60, 0x70, 0x58, 0x6c, 0x76
+    db 0x7c, 0x78, 0x70, 0x60, 0x00, 0x00, 0x00, 0x00
 
 glyph_2f:
     db 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00
